<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background_login"
              android:orientation="vertical">

	<!-- padding 内边距   layout_margin 外边距
			  android:layout_alignParentTop 布局的位置是否处于顶部 -->
	<RelativeLayout
		android:id="@+id/wel_business_rl"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="15dip"
		android:background="@drawable/background_login_div_bg"
		android:padding="15dip"
		>
		<!-- 账号 -->
		<TextView
			android:id="@+id/login_user_input"
			style="@style/normalText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginTop="5dp"
			android:text="@string/login_label_username"/>

		<EditText
			android:id="@+id/wel_username_et"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/login_user_input"
			android:hint="@string/login_username_hint"
			android:textCursorDrawable="@null"
			android:inputType="text"
			android:singleLine="true"
			android:text="jack"/>
		<!-- 密码 text -->
		<TextView
			android:id="@+id/login_password_input"
			style="@style/normalText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/wel_username_et"
			android:layout_marginTop="3dp"
			android:text="@string/login_label_password"/>

		<EditText
			android:id="@+id/wel_password_et"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/login_password_input"
			android:hint="@string/login_pwd_hint"
			android:inputType="textPassword"
			android:textCursorDrawable="@null"
			android:singleLine="true"
			android:text="123"
			/>
		<!-- 登录button -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_alignRight="@id/wel_password_et"
			android:layout_below="@id/wel_password_et"
			android:id="@+id/linearLayout"></LinearLayout>

		<Button
            android:id="@+id/requst_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin"
			android:layout_below="@+id/wel_password_et"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true" />

		<CheckBox
			android:id="@+id/login_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_checkbox"
            android:textColor="#888"
			android:layout_alignBottom="@+id/requst_btn"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true" />

	</RelativeLayout>


	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>

		<TextView
			android:id="@+id/wel_forgetpass_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:text="@string/login_register_link"
			android:textColor="#888"
			android:textColorLink="#FF0066CC"
			/>

		<!-- <ImageView
			android:id="@+id/miniTwitter_logo"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_marginBottom="25dp"
			android:layout_marginRight="25dp"
			android:src="@drawable/cat" />

	 <ImageView android:src="@drawable/logo"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_toLeftOf="@id/miniTwitter_logo"
		 android:layout_alignBottom="@id/miniTwitter_logo"
		 android:paddingBottom="8dp"
		  /> -->
		<ProgressBar
			android:id="@+id/login_process_dialog_progressBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="false"
			android:indeterminateDrawable="@drawable/dialog_style_color"
			android:visibility="invisible"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true" />
	</RelativeLayout>

</LinearLayout>
